--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 
                     <p class='caption'>Summary Statistics for Twitter album data</p>
-                    <img src='img/3_twit1.png' class='img-with-text'> <br>
+                    <img src='img/3_twit1.png'> <br>
 
                     <p>By sheer numbers, BTS Twitter fans appear to carry more weight per individual which more than 
                         compensates for their lower overall size throughout the three albums. By the third album, 
@@ -199,11 +199,15 @@
 
                     <img src='img/3_twit_users.png' class='img-with-text'><br>
 
-                    <p>Naturally, content generators make up a very small portion of total Twitter users, but account 
-                        for the majority of engagement. With the amount of engagement the content they push out receives, 
-                        we consider them a primary driving force behind Twitter collaboration. So, by studying these content 
-                        generators, we are better able to study the mechanisms behind collaboration on Twitter, opposed to 
-                        just looking at raw numbers and assuming collaboration.
+                    <p>Naturally, content generators make up a very small portion of total Twitter users (as seen 
+                        in the figure below), but account for the majority of engagement. With the amount of engagement the 
+                        content they push out receives, we consider them a primary driving force behind Twitter 
+                        collaboration, since they enable mutual engagement from their posts. For example, if a 
+                        content generator posts a tweet asking for fans to report to spread the release of an album 
+                        for more people to listen to it, fans collaborate by liking (increasing visibility), 
+                        retweeting (sharing), and replying (adding their own content). So, by studying these 
+                        content generators, we are better able to study the mechanisms behind collaboration on 
+                        Twitter, opposed to just looking at raw numbers and assuming collaboration.
                     </p> <br>
 
                     <p class='caption'>BTS Be Non-Artist/Non-PR Engagement Distributions</p>
@@ -435,12 +439,29 @@
         </div>
 
         <!-- conclusion -->
-        <div id='conclusions' class='category section-7'>
-            <div class='container container-7'>
-                <h3>Conclusions</h3>
-                <div class='container'>
+        <div id='conclusions' class='category section-2'>
+            <div class='container'>
+                <div class='text-block'>[our conclusions]</div>
+                <h2 class='hypo'>K-pop fan interaction and collaboration on <span>Twitter</span> overshadows that of 
+                    Swifties or Beliebers in spite of their smaller overall size.
+                </h2>
 
+                <br>
+
+                <div class='text-block'>On Twitter, a platform known for its quick, short interaction 
+                    style, BTS fans reign supreme, boasting greater interaction per individual compared 
+                    to our other two artists, especially in regards to likes and retweets.
                 </div>
+
+                <br><br><br><br><br>
+
+                <h2 class='hypo'>The impact of BTS Army falls short on <span>Wikipedia</span>, a platform that 
+                    requires a higher level of effort and domain knowledge for participation and 
+                    collaboration.
+                </h2>
+
+                <br><br><br><br><br>
+                
             </div>
         </div>
 
