updated twitter table

--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
                         tweets that contained the “query” hashtags #BTS and #DarkAndWild during the time period. 
                     </p> <br>
 
-                    <p>Using twint, we scraped all the original tweets during the specific album release timeframes. 
+                    <p>From twint, we are only able to scrape original tweets; we unfortunately cannot access retweets 
+                        or replies to tweets themselves. However, each tweet contains information about the number of 
+                        likes, retweets, and replies that specific tweet received. By using that data, we are able to 
+                        estimate how many total tweets there were during a given timeframe.  
                     </p> <br>
 
 
