changed twitter stuff

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class='container'>
                 <a href='#hashtagtakeovers' class='nav-link' id='nav1'>#HashtagTakeovers</a>
                 <a href='#data' class='nav-link' id='nav2'>Our Data</a>
-                <a href='#methods-analysis' class='nav-link' id='nav3'>Methods & Analysis</a>
+                <a href='#methods-analysis' class='nav-link' id='nav3'>Methods</a>
                 <a href='#results' class='nav-link' id='nav4'>Results</a>
                 <a href='#conclusions' class='nav-link' id='nav5'>Conclusions</a>
             </div>
@@ -119,7 +119,7 @@
         <!-- methods & analysis -->
         <div id='methods-analysis' class='category section-5'>
             <div class='container container-5'>
-                <h3>Methods & Analysis</h3>
+                <h3>Methods</h3>
 
                 <div class='container'>
                     
@@ -346,7 +346,7 @@
                         release periods to visualize the general creation trends. 
                     </p><br>
 
-                    <p class='caption'>Original tweets per day for each album</p>
+                    <p class='caption'>Original Tweets per Day for each Album</p>
                     <img src='img/4_twit3.png' class='img-with-text'><br>
 
                     <p>From these plots, we see an expected trend: the number of tweets per day increases 
@@ -367,7 +367,7 @@
                     <p>During the time period of the first album, 
                         BTS had roughly 255k followers compared to the tens of millions that Taylor Swift 
                         and Justin Bieber had. Despite this, there were still a similar amount of unique tweets 
-                        during the time period as seen in the figure above. BTS largely comes out on top of all 
+                        during the time period as seen in the original tweets figure above. BTS largely comes out on top of all 
                         three artists in these curves, meaning that their content generators were responsible for 
                         more of their total engagement.
                     </p><br>
