changed to methods

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class='container'>
                 <a href='#hashtagtakeovers' class='nav-link' id='nav1'>#HashtagTakeovers</a>
                 <a href='#data' class='nav-link' id='nav2'>Our Data</a>
-                <a href='#methods-analysis' class='nav-link' id='nav3'>Methods</a>
+                <a href='#methods' class='nav-link' id='nav3'>Methods</a>
                 <a href='#results' class='nav-link' id='nav4'>Results</a>
                 <a href='#conclusions' class='nav-link' id='nav5'>Conclusions</a>
             </div>
@@ -117,7 +117,7 @@
         </div>
 
         <!-- methods & analysis -->
-        <div id='methods-analysis' class='category section-5'>
+        <div id='methods' class='category section-5'>
             <div class='container container-5'>
                 <h3>Methods</h3>
 
